--- a/src/pizza.html
+++ b/src/pizza.html
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div id="randomPizzas" class="row">
-                    <div id="pizza0" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
+                    <div id="pizza0" class="randomPizzaContainer">
                         <div style="width:35%">
                             <img src="img/205/pizza.png" class="img-responsive">
                         </div>
@@ -129,7 +129,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div id="pizza1" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
+                    <div id="pizza1" class="randomPizzaContainer">
                         <div style="width:35%">
                             <img src="img/205/pizza.png" class="img-responsive">
                         </div>
