--- a/src/index.html
+++ b/src/index.html
@@ -160,7 +160,7 @@
 
 <body>
     <header>
-        <a href="/"><img src="img/profilepic.jpg"></a>
+        <a href="/"><img src="img/profilepic.jpg" alt="profile picture"></a>
         <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
@@ -173,25 +173,25 @@
         <div class="content">
             <ul>
                 <li>
-                    <img src="img\project-2048.jpg" width="100" height="50">
+                    <img src="img/project-2048.jpg" alt="project 2048 image" width="100" height="50">
                     <a href="project-2048.html">Build Your Own 2048!</a>
                     <p>I made my own version of 2048. How cool is that!?</p>
                 </li>
 
                 <li>
-                    <img src="img\project-webperf.jpg" width="100" height="62">
+                    <img src="img/project-webperf.jpg" alt="Website Performance Optimization image" width="100" height="62">
                     <a href="project-webperf.html">Website Performance Optimization</a>
                     <p>Hey... this class looks familiar.</p>
                 </li>
 
                 <li>
-                    <img src="img\project-mobile.jpg" width="100" height="61">
+                    <img src="img/project-mobile.jpg" alt="mobie web development image" width="100" height="61">
                     <a href="project-mobile.html">Mobile Web Development</a>
                     <p>Making mobile apps isn't so hard after all.</p>
                 </li>
 
                 <li>
-                    <img src="img/100/pizzeria.jpg" width="100" height="75">
+                    <img src="img/100/pizzeria.jpg" alt="pizzeria image" width="100" height="75">
                     <a href="pizza.html">Cam's Pizzeria</a>
                     <p>Who wants a performant pizza?</p>
                 </li>
